# CrystalMem

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  main.cpp
doc/: design.md  doc.md
include/CrystalMem/: allocator.h  global.h  memory.h  option.h  options.h  pool.h  resource.h  type.h  types.h  vendor.h
include/CrystalMem/allocator/: continuous_allocator.h  discrete_allocator.h  dynamic_allocator_impl.h  mono_allocator_impl.h
include/CrystalMem/pool/: concept.h  pool_impl.h
include/CrystalMem/pool/safe_best_fit/: block.h  free_map.h  safe_best_fit.h
include/CrystalMem/pool/slub/: block.h  bucket.h  slot.h  slub.h
include/CrystalMem/resource/: concept.h  debug.h  os.h  os_resource.h
lib/CrystalBase/: CMakeLists.txt
lib/CrystalUtil/: CMakeLists.txt
lib/foonathan_memory/: CMakeLists.txt
src/: header_only.cpp
src/pool/safe_best_fit/: safe_best_fit.cpp
test/: CMakeLists.txt  mock_pool.h  resource_test.cpp  test.cpp
test/GoogleTest/: CMakeLists.txt
test/pool/: pool_impl_test.cpp  test_safe_best_fit.cpp  test_slub.cpp
